feat: Ajout des endpoints de récupération des concessionnaires par uid et liste des produits du concessionnaire
